<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Neerbyy</string>
    <string name="action_settings">Settings</string>
    <string name="getUser">get User By Id</string>
    <string name="title_activity_login">Neerbyy</string>
    <string name="btnCreateAccount">INSCRIPTION</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnLoginLostPassword">LOST PASSWORD ?</string>
    <string name="btnRejoin">REJOIN NEERBYY</string>
    <string name="btnLostPassword">REINIT</string>
    <string name="hintUsername">Enter an username</string>
    <string name="hintFirstname">Firstname</string>
    <string name="hintLastname">Lastname</string>
    <string name="hintMail">Mail</string>
    <string name="hintMailLogin">Mail / Username</string>
    <string name="hintConfirmMail">Confirm mail</string>
    <string name="hintPassword">Password</string>
    <string name="hintConfirmPassword">Confirm password</string>
    <string name="title_activity_create_account">Neerbyy</string>
    <string name="title_activity_edit_info_user">Neerbyy</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu">Neerbyy</string>
    <string name="loginDefaultInfo">Enter your identifier:</string>
    <string name="ok">OK</string>
    
    <string name="str_btn_find">Find</string>
    <string name="hnt_et_location">Enter location</string>

    <color name="trans">#00000000</color>
    <color name="white">#FFFFFF</color>
    <color name="blue">#0000FF</color>
    <color name="greenNeerbyy">#3eb88e</color>
    <color name="greyNeerbyy">#CACACA</color>
    <color name="orangeNeerbyy">#FD5D32</color>
    <color name="redNeerbyy">#FD5D32</color>
    <color name="ErrorBackground">#FF4848</color>

    <string name="title_activity_map">Neerbyy</string>
    <string name="title_activity_map_view">Neerbyy</string>

    <drawable name="myPin">@drawable/iconmortel</drawable>
    <drawable name="myPin2">@drawable/pin_dark_green</drawable>

    <string name="title_activity_view_post">Neerbyy</string>
    <string name="hintPostMemory">Add a memory</string>
    <string name="hintPostComment">Add a message</string>
    <string name="postSendPost">send</string>
    <string name="loginMessageInscr">Don\'t have an account yet ? create one now</string>
    <string name="title_activity_report_pub">Report_pub</string>
    <string name="title_activity_report_com">Report_com</string>
    <string name="title_activity_view_conv">ViewConv</string>
    <string name="title_activity_menu2">Menu2</string>

</resources>
