<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount" >

    <TextView
        android:id="@+id/txtCreateAccountInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCreateUsername"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnValidInscr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtCreateConfirmMail"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="49dp"
        android:text="@string/ok" />

    <EditText
        android:id="@+id/txtCreateConfirmMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnValidInscr"
        android:layout_alignLeft="@+id/txtCreateMail"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hintConfirmMail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtCreateMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCreateConfirmMail"
        android:layout_alignLeft="@+id/txtCreateConfirmPassword"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/hintMail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtCreateConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCreateMail"
        android:layout_alignLeft="@+id/txtCreatePassword"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:hint="@string/hintConfirmPassword"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtCreatePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCreateConfirmPassword"
        android:layout_alignLeft="@+id/txtCreateUsername"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/hintPassword"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/txtCreateUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtCreatePassword"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="37dp"
        android:ems="10"
        android:hint="@string/hintUsername"
        android:inputType="text" />

</RelativeLayout>